Alternative for deprecated mixins

--- a/_sass/pages/boardroom/chat-area/_empty-state.scss
+++ b/_sass/pages/boardroom/chat-area/_empty-state.scss
@@ -2,15 +2,15 @@
 
 // Styles for the boardroom chat empty state
 .boardroom-chat-empty-state {
-  @include text-align(center);
-  @include color($muted);
-  @include font-size(1rem); // fs-6 = 1rem
-  @include margin-top(3rem); // mt-5 = 3rem
-  @include display(none);
+  text-align: center;
+  color: $muted;
+  font-size: 1rem; // fs-6 = 1rem
+  margin-top: 3rem; // mt-5 = 3rem
+  display: none;
 }
 
 .boardroom-chat-empty-icon {
-  @include font-size(2rem); // fs-2 = 2rem
-  @include margin-bottom(0.5rem); // mb-2 = 0.5rem
-  @include color($secondary);
+  font-size: 2rem; // fs-2 = 2rem
+  margin-bottom: 0.5rem; // mb-2 = 0.5rem
+  color: $secondary;
 }
