--- a/_sass/pages/boardroom/members-sidebar/_header.scss
+++ b/_sass/pages/boardroom/members-sidebar/_header.scss
@@ -1,11 +1,11 @@
 // SCSS partial for boardroom members-sidebar header component
 
 .boardroom-members-header {
-  @include display-flex;
-  @include justify-content(space-between);
-  @include align-items(center);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .boardroom-members-title {
-  @include margin-bottom(0);
+  margin-bottom: 0;
 }
