--- a/_sass/pages/boardroom/chat-area/_footer.scss
+++ b/_sass/pages/boardroom/chat-area/_footer.scss
@@ -1,62 +1,62 @@
 // SCSS partial for boardroom chat-area footer component
 
 .boardroom-message-input {
-  @include color($secondary);
-  @include display-flex;
-  @include align-items(center);
-  @include padding-right(1.5rem); // pr-4 = 1.5rem
-  @include padding-top(1.5rem); // pt-4 = 1.5rem
-  @include margin-top(0.5rem); // mt-2 = 0.5rem
-  @include flex-shrink(0);
-  @include position(sticky);
-  @include background-color($white);
-  @include bottom(0);
-  @include z-index(1);
+  color: $secondary;
+  display: flex;
+  align-items: center;
+  padding-right: 1.5rem; // pr-4 = 1.5rem
+  padding-top: 1.5rem; // pt-4 = 1.5rem
+  margin-top: 0.5rem; // mt-2 = 0.5rem
+  flex-shrink: 0;
+  position: sticky;
+  background-color: $white;
+  bottom: 0;
+  z-index: 1;
 }
 
 .boardroom-message-input-avatar {
-  @include width(100%);
-  @include height(100%);
-  @include aspect-ratio(1, 1);
-  @include object-fit(cover);
-  @include border-radius(50%);
-  @include display-block;
-  @include overflow(hidden);
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  border-radius: 50%;
+  display: block;
+  overflow: hidden;
 }
 
 .boardroom-message-input-field {
-  @include flex-grow(1);
-  @include font-size(1.5rem); // fs-4 = 1.5rem
-  @include margin-left(1.5rem); // ms-4 = 1.5rem
-  @include margin-right(1.5rem); // me-4 = 1.5rem
-  @include border-width(1px);
-  @include border-style(solid);
-  @include border-color($border-color);
-  @include border-radius(0.375rem);
-  @include padding(1rem); // p-3 = 1rem
-  @include background-color($white);
-  @include color($dark);
+  flex-grow: 1;
+  font-size: 1.5rem; // fs-4 = 1.5rem
+  margin-left: 1.5rem; // ms-4 = 1.5rem
+  margin-right: 1.5rem; // me-4 = 1.5rem
+  border-width: 1px;
+  border-style: solid;
+  border-color: $border-color;
+  border-radius: 0.375rem;
+  padding: 1rem; // p-3 = 1rem
+  background-color: $white;
+  color: $dark;
 }
 
 .boardroom-message-input-attach,
 .boardroom-message-input-emoji,
 .boardroom-message-input-send {
-  @include background-color(transparent);
-  @include border-width(0);
-  @include padding(0.5rem); // p-2 = 0.5rem
-  @include margin-left(1rem); // ms-3 = 1rem
-  @include color($secondary);
-  @include display-flex;
-  @include align-items(center);
-  @include justify-content(center);
-  @include cursor(pointer);
+  background-color: transparent;
+  border-width: 0;
+  padding: 0.5rem; // p-2 = 0.5rem
+  margin-left: 1rem; // ms-3 = 1rem
+  color: $secondary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .boardroom-message-input-send {
-  @include background-color($primary);
-  @include color($white);
-  @include border-radius(0.375rem);
-  @include padding-left(1rem); // px-3 = 1rem
-  @include padding-right(1rem);
-  @include margin-left(1.5rem); // ms-4 = 1.5rem
+  background-color: $primary;
+  color: $white;
+  border-radius: 0.375rem;
+  padding-left: 1rem; // px-3 = 1rem
+  padding-right: 1rem;
+  margin-left: 1.5rem; // ms-4 = 1.5rem
 }
