--- a/_sass/pages/boardroom/chat-area/_main.scss
+++ b/_sass/pages/boardroom/chat-area/_main.scss
@@ -2,42 +2,42 @@
 
 // Styles for the boardroom chat area wrapper
 .boardroom-chat-area {
-  @include display-flex;
-  @include flex-direction(column);
-  @include height(100%);
-  @include min-viewport-height(100);
-  @include min-width(100%);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100vh;
+  min-width: 100%;
 }
 
 // Styles for the boardroom chat messages area
 .boardroom-chat-messages {
-  @include flex(1 1 auto);
-  @include overflow(auto);
-  @include position(relative);
-  @include padding-top(1.5rem); // pt-4 = 1.5rem
+  flex: 1 1 auto;
+  overflow: auto;
+  position: relative;
+  padding-top: 1.5rem; // pt-4 = 1.5rem
 }
 
 // Styles for the boardroom message row
 .boardroom-message-row {
-  @include display-flex;
-  @include margin-bottom(0.5rem); // mb-2 = 0.5rem
+  display: flex;
+  margin-bottom: 0.5rem; // mb-2 = 0.5rem
   &-start {
-    @include justify-content(flex-start);
+    justify-content: flex-start;
   }
   &-end {
-    @include justify-content(flex-end);
+    justify-content: flex-end;
   }
 }
 
 // Styles for the boardroom message avatar
 .boardroom-message-avatar {
-  @include width(100%);
-  @include height(100%);
-  @include aspect-ratio(1, 1);
-  @include object-fit(cover);
-  @include border-radius(50%);
-  @include display-block;
-  @include overflow(hidden);
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  border-radius: 50%;
+  display: block;
+  overflow: hidden;
 }
 
 // Styles for the boardroom message text
