--- a/_sass/pages/boardroom/members-sidebar/_search-form.scss
+++ b/_sass/pages/boardroom/members-sidebar/_search-form.scss
@@ -1,51 +1,51 @@
 // SCSS partial for boardroom members-sidebar search form component
 
 .boardroom-members-search-form {
-  @include display-flex;
-  @include border-radius(0.375rem);
-  @include margin(0);
+  display: flex;
+  border-radius: 0.375rem;
+  margin: 0;
   &-relative {
-    @include position(relative);
-    @include width(100%);
+    position: relative;
+    width: 100%;
   }
   &-center {
-    @include display-flex;
-    @include align-items(center);
-    @include justify-content(center);
-    @include width(100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
   }
 }
 
 .boardroom-members-search-input {
-  @include border-radius(0.375rem);
-  @include flex-grow(1);
-  @include border-width(1px);
-  @include border-style(solid);
-  @include border-color($border-color);
-  @include background-color($white);
-  @include width(100%);
-  @include padding(0.5rem); // p-2 = 0.5rem
+  border-radius: 0.375rem;
+  flex-grow: 1;
+  border-width: 1px;
+  border-style: solid;
+  border-color: $border-color;
+  background-color: $white;
+  width: 100%;
+  padding: 0.5rem; // p-2 = 0.5rem
 }
 
 .boardroom-members-search-addon {
-  @include border-width(0);
-  @include background-color(transparent);
-  @include display-flex;
-  @include align-items(center);
-  @include justify-content(center);
-  @include margin-left(0.5rem); // ms-2 = 0.5rem
+  border-width: 0;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 0.5rem; // ms-2 = 0.5rem
   &-absolute {
-    @include position(absolute);
-    @include top(50%);
-    @include start(50%);
-    @include translate(-50%, -50%);
-    @include z-index(2);
-    @include pointer-events(none);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    pointer-events: none;
   }
 }
 
 .boardroom-members-list {
-  @include list-style(none);
-  @include margin-bottom(0);
-  @include padding-left(0);
+  list-style: none;
+  margin-bottom: 0;
+  padding-left: 0;
 }
