--- a/_sass/pages/boardroom/members-sidebar/_toggle-strip.scss
+++ b/_sass/pages/boardroom/members-sidebar/_toggle-strip.scss
@@ -1,45 +1,45 @@
 // SCSS partial for boardroom members-sidebar toggle strip component
 
 .boardroom-members-sidebar-toggle-strip {
-  @include display-flex;
-  @include flex-direction(column);
-  @include align-items(center);
-  @include background-color($light);
-  @include border-end-width(1px);
-  @include border-end-style(solid);
-  @include border-end-color($border-color);
-  @include padding-top(0.5rem); // py-2 = 0.5rem
-  @include padding-bottom(0.5rem);
-  @include width(100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: $light;
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-right-color: $border-color;
+  padding-top: 0.5rem; // py-2 = 0.5rem
+  padding-bottom: 0.5rem;
+  width: 100%;
 }
 
 .boardroom-toggle-members-btn,
 .boardroom-other-action-btn {
-  @include background-color(transparent);
-  @include border-width(0);
-  @include margin-top(0.5rem); // my-2 = 0.5rem
-  @include margin-bottom(0.5rem);
-  @include padding(0.5rem); // p-2 = 0.5rem
-  @include border-radius(0.375rem);
-  @include color($secondary);
-  @include display-flex;
-  @include align-items(center);
-  @include justify-content(center);
+  background-color: transparent;
+  border-width: 0;
+  margin-top: 0.5rem; // my-2 = 0.5rem
+  margin-bottom: 0.5rem;
+  padding: 0.5rem; // p-2 = 0.5rem
+  border-radius: 0.375rem;
+  color: $secondary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .boardroom-toggle-members-btn:hover,
 .boardroom-other-action-btn:hover {
-  @include background-color($secondary);
+  background-color: $secondary;
 }
 
 .boardroom-members-sidebar-strip-spacer {
-  @include flex-grow(1);
-  @include width(100%);
-  @include height(100%);
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
 }
 
 .boardroom-members-sidebar-toggle-icon {
-  @include margin-bottom(1rem); // mb-3 = 1rem
-  @include cursor(pointer);
-  @include transition(all 0.2s);
+  margin-bottom: 1rem; // mb-3 = 1rem
+  cursor: pointer;
+  transition: all 0.2s;
 }
