--- a/_sass/pages/boardroom/section/_main.scss
+++ b/_sass/pages/boardroom/section/_main.scss
@@ -1,32 +1,32 @@
 // SCSS partial for boardroom section component (migrated from _boardroom-section.scss)
 
 .boardroom-boardroom-container {
-  @include width(100%);
-  @include min-viewport-height(100);
-  @include height(100%);
-  @include padding(0);
-  @include box-sizing(border-box);
-  @include display-flex;
-  @include flex-direction(column);
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
 .boardroom-section {
-  @include background-color($white);
-  @include flex(1 1 auto);
-  @include display-flex;
-  @include flex-direction(column);
-  @include height(100%);
-  @include min-viewport-height(100);
+  background-color: $white;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .boardroom-container-fluid {
-  @include padding-top(0);
-  @include padding-bottom(0);
-  @include padding-left(0);
-  @include padding-right(0);
-  @include flex(1 1 auto);
-  @include display-flex;
-  @include flex-direction(column);
-  @include height(100%);
-  @include min-viewport-height(100);
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100vh;
 }
