alternative for deprecated mixins

--- a/_sass/pages/boardroom/chat-area/_main.scss
+++ b/_sass/pages/boardroom/chat-area/_main.scss
@@ -42,18 +42,18 @@
 
 // Styles for the boardroom message text
 .boardroom-message-text {
-  @include font-size(1rem); // fs-6 = 1rem
-  @include padding(1rem); // p-3 = 1rem
-  @include margin-bottom(0.25rem); // mb-1 = 0.25rem
-  @include border-radius(50rem); // rounded-pill
+  font-size: 1rem; // fs-6 = 1rem
+  padding: 1rem; // p-3 = 1rem
+  margin-bottom: 0.25rem; // mb-1 = 0.25rem
+  border-radius: 50rem; // rounded-pill
   &-received {
-    @include background-color($light);
-    @include margin-left(1rem); // ms-3 = 1rem
+    background-color: $light;
+    margin-left: 1rem; // ms-3 = 1rem
   }
   &-sent {
-    @include background-color($primary);
-    @include color($white);
-    @include margin-right(1rem); // me-3 = 1rem
+    background-color: $primary;
+    color: $white;
+    margin-right: 1rem; // me-3 = 1rem
   }
 }
 
