--- a/_sass/pages/boardroom/chat-area/_main.scss
+++ b/_sass/pages/boardroom/chat-area/_main.scss
@@ -59,58 +59,58 @@
 
 // Styles for the boardroom message meta
 .boardroom-message-meta {
-  @include font-size(1rem);
-  @include border-radius(50rem);
-  @include color($text-muted);
+  font-size: 1rem;
+  border-radius: 50rem;
+  color: $text-muted;
   &-received {
-    @include margin-left(1rem);
-    @include float(right);
+    margin-left: 1rem;
+    float: right;
   }
   &-sent {
-    @include margin-right(1rem);
+    margin-right: 1rem;
   }
 }
 
 // Styles for the boardroom message avatar block
 .boardroom-message-avatar-block {
-  @include display-flex;
-  @include flex-direction(column);
-  @include align-items(center);
-  @include margin-right(0.5rem);
-  @include margin-left(0.5rem);
-  @include align-self(flex-end);
-  @include min-width(100%);
-  @include max-width(100%);
-  @include flex-shrink(0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+  align-self: flex-end;
+  min-width: 100%;
+  max-width: 100%;
+  flex-shrink: 0;
 }
 
 .boardroom-message-avatar-meta {
-  @include display-flex;
-  @include flex-direction(column);
-  @include align-items(center);
-  @include margin-top(0.5rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0.5rem;
 }
 
 // Additional styles for boardroom message avatar name and role
 .boardroom-message-avatar-name {
-  @include font-size(1rem);
-  @include font-weight(600);
-  @include color($dark);
-  @include margin-bottom(0.25rem);
+  font-size: 1rem;
+  font-weight: 600;
+  color: $dark;
+  margin-bottom: 0.25rem;
 }
 
 .boardroom-message-avatar-role {
-  @include display-inline-block;
-  @include font-size(1rem);
-  @include vertical-align(middle);
-  @include margin-left(0.5rem);
-  @include padding-top(0.25rem);
-  @include padding-bottom(0.25rem);
-  @include padding-left(0.5rem);
-  @include padding-right(0.5rem);
-  @include border-radius(0.375rem);
-  @include background-color($secondary);
-  @include color($white);
-  @include font-weight(500);
-  @include line-height(1);
+  display: inline-block;
+  font-size: 1rem;
+  vertical-align: middle;
+  margin-left: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border-radius: 0.375rem;
+  background-color: $secondary;
+  color: $white;
+  font-weight: 500;
+  line-height: 1;
 }
