--- a/_sass/pages/boardroom/members-sidebar/_main.scss
+++ b/_sass/pages/boardroom/members-sidebar/_main.scss
@@ -66,13 +66,13 @@
 }
 
 .boardroom-member-status {
-  @extend fs-6;
+  font-size: 1rem; // fs-6 = 1rem
   @extend text-success;
   @extend mt-1;
 }
 
 .boardroom-member-last-message {
-  @extend fs-6;
+  font-size: 1rem; // fs-6 = 1rem
   @extend text-muted;
   @extend mt-2;
   @extend text-truncate;
@@ -84,7 +84,7 @@
   @extend rounded-pill;
   @extend py-1;
   @extend px-3;
-  @extend fs-6;
+  font-size: 1rem; // fs-6 = 1rem
   @extend align-self-start;
   @extend ms-2;
   @extend mt-1;
