--- a/_sass/pages/boardroom/members-sidebar/_main.scss
+++ b/_sass/pages/boardroom/members-sidebar/_main.scss
@@ -67,8 +67,8 @@
 
 .boardroom-member-status {
   font-size: 1rem; // fs-6 = 1rem
-  @extend text-success;
-  @extend mt-1;
+  color: $success;
+  margin-top: 0.25rem; // mt-1 = 0.25rem
 }
 
 .boardroom-member-last-message {
