--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -1,5 +1,20 @@
 // SCSS partial for boardroom section component (migrated from _boardroom-section.scss)
 
+#members {
+  @extend w-100;
+  @extend h-100;
+  @extend min-vh-100;
+  @extend min-w-100;
+  @extend flex-grow-1;
+  @extend d-flex;
+  @extend flex-column;
+  @extend p-0;
+}
+
+.icon-white {
+  filter: invert(1);
+}
+
 .boardroom-boardroom-container {
   width: 100%;
   min-height: 100vh;
