--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -1,14 +1,14 @@
 // SCSS partial for boardroom section component (migrated from _boardroom-section.scss)
 
 #members {
-  @extend w-100;
-  @extend h-100;
-  @extend min-vh-100;
-  @extend min-w-100;
-  @extend flex-grow-1;
-  @extend d-flex;
-  @extend flex-column;
-  @extend p-0;
+  @extend .w-100;
+  @extend .h-100;
+  @extend .min-vh-100;
+  @extend .min-w-100;
+  @extend .flex-grow-1;
+  @extend .d-flex;
+  @extend .flex-column;
+  @extend .p-0;
 }
 
 .icon-white {
