--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -4,7 +4,7 @@
   @extend .w-100;
   @extend .h-100;
   @extend .min-vh-100;
-  @extend .min-w-100;
+  @extend .min-vw-100;
   @extend .flex-grow-1;
   @extend .d-flex;
   @extend .flex-column;
