--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,2 +1,7 @@
 @import "common";
-@import "pages/boardroom/boardroom";
+
+
+@import "components/boardroom/main";
+
+
+@import "pages/boardroom/main";
