--- a/_sass/components/boardroom/chat-area/_main.scss
+++ b/_sass/components/boardroom/chat-area/_main.scss
@@ -1,13 +1,17 @@
-// SCSS partial for boardroom chat-area main component
+// SCSS partial for boardroom chat area component
+// Styles for .boardroom-chat-area
 
-// Styles for the boardroom chat area wrapper
 .boardroom-chat-area {
+  flex: 1 1 auto;
+  height: 100%;
+  background: $body-bg;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  overflow: auto;
   min-height: 100vh;
   min-width: 100%;
 }
+
 
 // Styles for the boardroom chat messages area
 .boardroom-chat-messages {
