--- a/_sass/components/boardroom/main.scss
+++ b/_sass/components/boardroom/main.scss
@@ -1,18 +1,22 @@
 // Imports all boardroom component SCSS files for the boardroom page layout.
-@import 'main';
 
 // Chat area components
 @import 'chat-area/main';
 @import 'chat-area/header';
-@import 'chat-area/footer';
+@import 'chat-area/message-input';
 @import 'chat-area/empty-state';
-
-// Main row component
-@import 'main-row/main';
 
 // Members sidebar components
 @import 'members-sidebar/main';
+@import 'members-sidebar/container';
+@import 'members-sidebar/sidebar';
 @import 'members-sidebar/header';
 @import 'members-sidebar/search-form';
-@import 'members-sidebar/toggle-strip';
 @import 'members-sidebar/empty-state';
+@import 'members-sidebar/member-status';
+
+
+// Import component partials
+@import 'toggle-strip';
+@import 'icon-white';
+@import 'members';
