--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -1,20 +1,6 @@
-// SCSS partial for boardroom section component (migrated from _boardroom-section.scss)
+// SCSS partial for boardroom page layout
 
-#members {
-  @extend .w-100;
-  @extend .h-100;
-  @extend .min-vh-100;
-  @extend .min-vw-100;
-  @extend .flex-grow-1;
-  @extend .d-flex;
-  @extend .flex-column;
-  @extend .p-0;
-}
-
-.icon-white {
-  filter: invert(1);
-}
-
+// Boardroom container component styles
 .boardroom-boardroom-container {
   width: 100vw;
   min-height: 100vh;
@@ -23,15 +9,6 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-}
-
-.boardroom-section {
-  background-color: $white;
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 100vh;
 }
 
 .boardroom-container-fluid {
@@ -51,46 +28,17 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
-}
-
-// Toggle strip (left)
-.toggle-strip {
-  flex: 0 0 auto;
-  width: 48px;
-  min-width: 48px;
-  height: 100%;
-  background: $gray-200;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  border-right: 1px solid $gray-300;
-  z-index: 2;
-}
-
-// Members sidebar (middle)
-.members-sidebar {
-  flex: 0 0 320px;
-  max-width: 320px;
-  min-width: 240px;
-  height: 100%;
-  background: $white;
-  border-right: 1px solid $gray-300;
-  transition: transform 0.3s cubic-bezier(0.4,0,0.2,1);
-  z-index: 1;
-  will-change: transform;
-}
-.members-sidebar.hidden {
-  transform: translateX(-100%);
-  pointer-events: none;
-}
-
-// Chat area (right)
-.chat-area {
+  min-height: 100vh;
+  margin: 0;
   flex: 1 1 auto;
-  height: 100%;
-  background: $body-bg;
+}
+
+// Boardroom section component styles
+.boardroom-section {
+  background-color: $white;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  height: 100%;
+  min-height: 100vh;
 }
