--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -1,7 +1,7 @@
 // SCSS partial for boardroom page layout
 
 // Boardroom container component styles
-.boardroom-boardroom-container {
+.boardroom-container {
   width: 100vw;
   min-height: 100vh;
   height: 100%;
@@ -31,6 +31,16 @@
   min-height: 100vh;
   margin: 0;
   flex: 1 1 auto;
+
+  .toggle-strip-col {
+    width: 5%;
+  }
+  .members-sidebar-col {
+    width: 15%;
+  }
+  .chat-area-col {
+    width: 80%;
+  }
 }
 
 // Boardroom section component styles
