--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -2,53 +2,30 @@
 
 // Boardroom container component styles
 .boardroom-container {
-  width: 100vw;
-  min-height: 100vh;
-  height: 100%;
-  padding: 0;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-}
+  @extend .container-fluid;
 
-.boardroom-container-fluid {
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 100vh;
-}
+  // Main boardroom section
+  .boardroom-section {
+    @extend .py-4;
 
-.boardroom-main-row {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  margin: 0;
-  flex: 1 1 auto;
+    .boardroom-container-fluid {
+      @extend .container-fluid;
 
-  .toggle-strip-col {
-    width: 5%;
+      .boardroom-main-row {
+        @extend .row, .gx-3;
+
+        .toggle-strip-col {
+          @extend .col-1, .d-flex, .flex-column, .align-items-center, .px-0;
+        }
+
+        .members-sidebar-col {
+          @extend .col-3, .d-flex, .flex-column, .px-2;
+        }
+
+        .chat-area-col {
+          @extend .col-8, .d-flex, .flex-column, .px-2;
+        }
+      }
+    }
   }
-  .members-sidebar-col {
-    width: 15%;
-  }
-  .chat-area-col {
-    width: 80%;
-  }
-}
-
-// Boardroom section component styles
-.boardroom-section {
-  background-color: $white;
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 100vh;
 }
