--- a/_sass/components/boardroom/chat-area/_message-input.scss
+++ b/_sass/components/boardroom/chat-area/_message-input.scss
@@ -1,5 +1,6 @@
 // SCSS partial for boardroom chat-area footer component
 
+// Ensure the message input stretches to the full width of its parent
 .boardroom-message-input {
   color: $secondary;
   display: flex;
@@ -12,6 +13,8 @@
   background-color: $white;
   bottom: 0;
   z-index: 1;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .boardroom-message-input-avatar {
