--- a/_sass/components/boardroom/main.scss
+++ b/_sass/components/boardroom/main.scss
@@ -37,8 +37,10 @@
   background: $white;
 }
 
+
+// Use $gray-100 (Bootstrap) instead of $gray-50
 .toggle-strip-col {
-  background: $gray-50;
+  background: $gray-100;
   border-right: 1px solid $gray-200;
   min-width: 60px;
   box-shadow: 2px 0 8px 0 rgba(0,0,0,0.03);
