--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -26,20 +26,7 @@
         min-height: 70vh;
         align-items: stretch;
 
-        .toggle-strip-col {
-          @extend .col-1, .d-flex, .flex-column, .align-items-center, .px-0;
-          min-width: 60px;
-        }
-
-        .members-sidebar-col {
-          @extend .col-3, .d-flex, .flex-column, .px-2;
-          min-width: 260px;
-        }
-
-        .chat-area-col {
-          @extend .col-8, .d-flex, .flex-column, .px-2;
-          min-width: 0;
-        }
+        // All column sizing and alignment handled by flex in component SCSS
       }
     }
   }
