--- a/_sass/components/boardroom/main.scss
+++ b/_sass/components/boardroom/main.scss
@@ -47,11 +47,14 @@
   align-items: stretch;
 }
 
+
 .toggle-strip-col {
   background: $gray-100;
   border-right: 1px solid $gray-200;
   box-shadow: 2px 0 8px 0 rgba(0,0,0,0.03);
-  flex: 0 0 72px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 72px;
   max-width: 72px;
   min-width: 72px;
   display: flex;
@@ -60,12 +63,15 @@
   padding: 0;
 }
 
+
 .members-sidebar-col {
   background: $white;
   border-right: 1px solid $gray-200;
   box-shadow: 2px 0 8px 0 rgba(0,0,0,0.02);
   z-index: 2;
-  flex: 0 0 320px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 320px;
   max-width: 320px;
   min-width: 320px;
   display: flex;
@@ -74,11 +80,14 @@
   padding-right: 0.5rem;
 }
 
+
 .chat-area-col {
   background: $white;
   min-width: 0;
   z-index: 1;
-  flex: 1 1 0%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
   display: flex;
   flex-direction: column;
   padding-left: 0.5rem;
