--- a/_includes/boardroom/chat-area.html
+++ b/_includes/boardroom/chat-area.html
@@ -1,8 +1,8 @@
-<section id="chatArea" class="boardroom-chat-area" aria-label="Chat Area">
+<div id="chatArea" class="boardroom-chat-area" aria-label="Chat Area">
   {% include boardroom/chat-area/header.html %}
-  <section class="boardroom-chat-messages" id="chatMessages" aria-label="Chat Messages">
+  <div class="boardroom-chat-messages" id="chatMessages" aria-label="Chat Messages">
     <!-- Chat messages will be injected here by JavaScript -->
     {% include boardroom/chat-area/empty-state.html %}
-  </section>
-  {% include boardroom/chat-area/footer.html %}
-</section>
+  </div>
+</div>
+{% include boardroom/chat-area/footer.html %}
