--- a/_sass/pages/boardroom/_main.scss
+++ b/_sass/pages/boardroom/_main.scss
@@ -8,26 +8,28 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  margin: 0;
+  padding: 0;
+}
 
-  // Main boardroom section
-  .boardroom-section {
-    @extend .py-4;
-    width: 100%;
-    max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    box-sizing: border-box;
+.boardroom-section {
+  width: 100%;
+  max-width: 100vw;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    .boardroom-container-fluid {
-      @extend .container-fluid;
+.boardroom-container-fluid {
+  @extend .container-fluid;
+  margin: 0;
+  padding: 0;
+}
 
-      .boardroom-main-row {
-        @extend .row, .gx-3;
-        min-height: 70vh;
-        align-items: stretch;
-
-        // All column sizing and alignment handled by flex in component SCSS
-      }
-    }
-  }
+.boardroom-main-row {
+  @extend .row, .gx-0;
+  min-height: 70vh;
+  align-items: stretch;
+  margin: 0;
+  padding: 0;
 }
