--- a/_sass/components/boardroom/chat-area/_main.scss
+++ b/_sass/components/boardroom/chat-area/_main.scss
@@ -25,6 +25,9 @@
 .boardroom-message-row {
   @extend .d-flex;
   margin-bottom: 0.5rem;
+  max-width: 100%;
+  width: 100%;
+  box-sizing: border-box;
   &.boardroom-message-row-start {
     justify-content: flex-start;
   }
