--- a/_sass/components/boardroom/members-sidebar/_member-status.scss
+++ b/_sass/components/boardroom/members-sidebar/_member-status.scss
@@ -19,6 +19,10 @@
   transition: background 0.2s, box-shadow 0.2s;
   cursor: pointer;
   outline: 0;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
   &:focus,
   &:hover {
     background: $light;
