--- a/_sass/components/boardroom/members-sidebar/_member-status.scss
+++ b/_sass/components/boardroom/members-sidebar/_member-status.scss
@@ -55,6 +55,8 @@
   display: flex;
   flex-direction: column;
   min-width: 0;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .boardroom-member-info-row {
