--- a/_sass/components/boardroom/members-sidebar/_member-status.scss
+++ b/_sass/components/boardroom/members-sidebar/_member-status.scss
@@ -2,6 +2,10 @@
 
 .boardroom-members-section {
   padding: 1.5rem; // p-4 = 1.5rem
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 // SCSS partial for boardroom members-sidebar member item
