--- a/_sass/components/boardroom/_toggle-strip.scss
+++ b/_sass/components/boardroom/_toggle-strip.scss
@@ -17,9 +17,8 @@
 .boardroom-other-action-btn {
   background-color: transparent;
   border-width: 0;
-  margin-top: 0.5rem; // my-2 = 0.5rem
-  margin-bottom: 0.5rem;
-  padding: 0.5rem; // p-2 = 0.5rem
+  margin: 0;
+  padding: 0;
   border-radius: 0.375rem;
   color: $secondary;
   display: flex;
