--- a/_includes/boardroom/chat-area.html
+++ b/_includes/boardroom/chat-area.html
@@ -1,8 +1,8 @@
-<div id="chatArea" class="boardroom-chat-area" aria-label="Chat Area">
+<section id="chatArea" class="boardroom-chat-area" aria-label="Chat Area">
   {% include boardroom/chat-area/header.html %}
-  <div class="boardroom-chat-messages" id="chatMessages" aria-label="Chat Messages">
+  <section class="boardroom-chat-messages" id="chatMessages" aria-label="Chat Messages">
     <!-- Chat messages will be injected here by JavaScript -->
     {% include boardroom/chat-area/empty-state.html %}
-  </div>
+  </section>
   {% include boardroom/chat-area/footer.html %}
-</div>
+</section>
