--- a/_includes/boardroom/toggle-strip.html
+++ b/_includes/boardroom/toggle-strip.html
@@ -1,4 +1,4 @@
-<nav id="membersSidebarToggleStrip" class="boardroom-members-sidebar-toggle-strip" aria-label="Sidebar Toggle">
+<nav id="membersSidebarToggleStrip" class="boardroom-members-sidebar-toggle-strip toggle-strip-col" aria-label="Sidebar Navigation">
   <button id="toggleMembersBtn" class="boardroom-toggle-members-btn" title="Toggle Members" aria-label="Toggle Members">
     <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/people.svg" alt="Users" width="20" height="20" class="icon-white" />
   </button>
