--- a/_includes/boardroom/members-sidebar/empty-state.html
+++ b/_includes/boardroom/members-sidebar/empty-state.html
@@ -1,6 +1,6 @@
 <div class="boardroom-members-empty-state" id="members-empty-state">
   <span class="boardroom-members-empty-icon" aria-hidden="true">
-    <img src="/assets/svg/members-empty.svg" width="32" height="32" alt="No members" />
+    <img src="/assets/svg/members-empty.svg" width="32" height="32" alt="No members" class="boardroom-members-empty-img" />
   </span><br>
   <span class="boardroom-members-empty-title">No members found.</span><br>
   <span class="boardroom-members-empty-desc">Invite colleagues to join the boardroom!</span>
