--- a/_includes/boardroom/toggle-strip.html
+++ b/_includes/boardroom/toggle-strip.html
@@ -1,10 +1,11 @@
-<nav id="membersSidebarToggleStrip" class="boardroom-members-sidebar-toggle-strip toggle-strip-col" aria-label="Sidebar Navigation">
+
+<nav id="membersSidebarToggleStrip" class="boardroom-members-sidebar-toggle-strip" aria-label="Sidebar Navigation">
   <button id="toggleMembersBtn" class="boardroom-toggle-members-btn" title="Toggle Members" aria-label="Toggle Members">
-    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/people.svg" alt="Users" width="20" height="20" class="icon-white" />
+    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/people.svg" alt="Users" width="20" height="20" class="boardroom-toggle-members-icon" />
   </button>
   <button class="boardroom-other-action-btn" title="Other Action" aria-label="Other Action">
-    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/gear.svg" alt="Settings" width="20" height="20" class="icon-white" />
+    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/gear.svg" alt="Settings" width="20" height="20" class="boardroom-other-action-icon" />
   </button>
   <span class="boardroom-members-sidebar-strip-spacer"></span>
-  <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/chevron-double-left.svg" alt="Collapse Sidebar" class="boardroom-members-sidebar-toggle-icon icon-white" id="membersSidebarToggleIcon" width="18" height="18" />
+  <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/chevron-double-left.svg" alt="Collapse Sidebar" class="boardroom-members-sidebar-toggle-icon" id="membersSidebarToggleIcon" width="18" height="18" />
 </nav>
