--- a/_sass/components/boardroom/_toggle-strip.scss
+++ b/_sass/components/boardroom/_toggle-strip.scss
@@ -13,23 +13,11 @@
   width: 100%;
 }
 
-.boardroom-toggle-members-btn,
-.boardroom-other-action-btn {
-  background-color: transparent;
-  border-width: 0;
-  margin: 0;
-  padding: 0;
-  border-radius: 0.375rem;
-  color: $secondary;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-.boardroom-toggle-members-btn:hover,
-.boardroom-other-action-btn:hover {
-  background-color: $secondary;
-}
+// .boardroom-toggle-members-btn and .boardroom-other-action-btn styles moved to unique class per element in _sass/pages/index.scss
+
+
+// .boardroom-toggle-members-btn:hover and .boardroom-other-action-btn:hover styles should be handled in unique class or via Bootstrap utilities
 
 .boardroom-members-sidebar-strip-spacer {
   flex-grow: 1;
