--- a/_sass/components/boardroom/members-sidebar/_header.scss
+++ b/_sass/components/boardroom/members-sidebar/_header.scss
@@ -1,11 +1,7 @@
 // SCSS partial for boardroom members-sidebar header component
 
-.boardroom-members-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
-.boardroom-members-title {
-  margin-bottom: 0;
-}
+// .boardroom-members-header styles moved to unique class per element in _sass/pages/index.scss
+
+
+// .boardroom-members-title styles moved to unique class per element in _sass/pages/index.scss
