--- a/_includes/boardroom/members-sidebar/header.html
+++ b/_includes/boardroom/members-sidebar/header.html
@@ -2,7 +2,7 @@
   <h2 class="boardroom-members-title">Members</h2>
   <button class="boardroom-invite-member-btn" title="Invite Member" aria-label="Invite Member">
     <span class="boardroom-invite-member-icon" aria-hidden="true">
-      <img src="/assets/svg/invite-member.svg" width="18" height="18" alt="Invite" />
+      <img src="/assets/svg/invite-member.svg" width="18" height="18" alt="Invite" class="boardroom-invite-member-img" />
     </span>
   </button>
 </header>
