--- a/_includes/boardroom/members-sidebar/search-form.html
+++ b/_includes/boardroom/members-sidebar/search-form.html
@@ -1,6 +1,6 @@
-<form class="boardroom-members-search-form boardroom-members-search-form-relative" role="search" aria-label="Search Members">
+<form class="boardroom-members-search-form" role="search" aria-label="Search Members">
   <input type="search" class="boardroom-members-search-input" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-  <span class="boardroom-members-search-addon boardroom-members-search-addon-absolute" id="search-addon">
-    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/search.svg" alt="Search" width="16" height="16" class="icon-white" />
+  <span class="boardroom-members-search-addon" id="search-addon">
+    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/search.svg" alt="Search" width="16" height="16" class="boardroom-members-search-icon" />
   </span>
 </form>
