--- a/_sass/components/boardroom/chat-area/_message-input.scss
+++ b/_sass/components/boardroom/chat-area/_message-input.scss
@@ -1,66 +1,17 @@
 // SCSS partial for boardroom chat-area footer component
 
 // Ensure the message input stretches to the full width of its parent
-.boardroom-message-input {
-  color: $secondary;
-  display: flex;
-  align-items: center;
-  padding-right: 1.5rem; // pr-4 = 1.5rem
-  padding-top: 1.5rem; // pt-4 = 1.5rem
-  margin-top: 0.5rem; // mt-2 = 0.5rem
-  flex-shrink: 0;
-  position: sticky;
-  background-color: $white;
-  bottom: 0;
-  z-index: 1;
-  width: 100%;
-  max-width: 100%;
-  box-sizing: border-box;
-}
 
-.boardroom-message-input-avatar {
-  width: 10%;
-  height: 10%;
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
-  border-radius: 50%;
-  display: block;
-  overflow: hidden;
-}
+// .boardroom-message-input styles moved to unique class per element in _sass/pages/index.scss
 
-.boardroom-message-input-field {
-  flex-grow: 1;
-  font-size: 1.5rem; // fs-4 = 1.5rem
-  margin-left: 1.5rem; // ms-4 = 1.5rem
-  margin-right: 1.5rem; // me-4 = 1.5rem
-  border-width: 1px;
-  border-style: solid;
-  border-color: $border-color;
-  border-radius: 0.375rem;
-  padding: 1rem; // p-3 = 1rem
-  background-color: $white;
-  color: $dark;
-}
 
-.boardroom-message-input-attach,
-.boardroom-message-input-emoji,
-.boardroom-message-input-send {
-  background-color: transparent;
-  border-width: 0;
-  padding: 0.5rem; // p-2 = 0.5rem
-  margin-left: 1rem; // ms-3 = 1rem
-  color: $secondary;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
+// .boardroom-message-input-avatar styles moved to unique class per element in _sass/pages/index.scss
 
-.boardroom-message-input-send {
-  background-color: $primary;
-  color: $white;
-  border-radius: 0.375rem;
-  padding-left: 1rem; // px-3 = 1rem
-  padding-right: 1rem;
-  margin-left: 1.5rem; // ms-4 = 1.5rem
-}
+
+// .boardroom-message-input-field styles moved to unique class per element in _sass/pages/index.scss
+
+
+// .boardroom-message-input-attach, .boardroom-message-input-emoji, .boardroom-message-input-send styles moved to unique class per element in _sass/pages/index.scss
+
+
+// .boardroom-message-input-send styles moved to unique class per element in _sass/pages/index.scss
