--- a/_sass/components/boardroom/members-sidebar/_search-form.scss
+++ b/_sass/components/boardroom/members-sidebar/_search-form.scss
@@ -1,51 +1,13 @@
 // SCSS partial for boardroom members-sidebar search form component
 
-.boardroom-members-search-form {
-  display: flex;
-  border-radius: 0.375rem;
-  margin: 0;
-  &-relative {
-    position: relative;
-    width: 100%;
-  }
-  &-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-  }
-}
 
-.boardroom-members-search-input {
-  border-radius: 0.375rem;
-  flex-grow: 1;
-  border-width: 1px;
-  border-style: solid;
-  border-color: $border-color;
-  background-color: $white;
-  width: 100%;
-  padding: 0.5rem; // p-2 = 0.5rem
-}
+// .boardroom-members-search-form styles moved to unique class per element in _sass/pages/index.scss
 
-.boardroom-members-search-addon {
-  border-width: 0;
-  background-color: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 0.5rem; // ms-2 = 0.5rem
-  &-absolute {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    pointer-events: none;
-  }
-}
 
-.boardroom-members-list {
-  list-style: none;
-  margin-bottom: 0;
-  padding-left: 0;
-}
+// .boardroom-members-search-input styles moved to unique class per element in _sass/pages/index.scss
+
+
+// .boardroom-members-search-addon styles moved to unique class per element in _sass/components/_boardroom-icons.scss
+
+
+// .boardroom-members-list styles moved to unique class per element in _sass/pages/index.scss
