--- a/_sass/components/boardroom/chat-area/_main.scss
+++ b/_sass/components/boardroom/chat-area/_main.scss
@@ -142,3 +142,14 @@
   font-weight: 500;
   line-height: 1;
 }
+
+// Right column: Chat area
+.chat-area-col {
+  @extend .col;
+  background: $white;
+  min-width: 0;
+  flex: 1 1 0%;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
