--- a/_sass/components/boardroom/_main.scss
+++ b/_sass/components/boardroom/_main.scss
@@ -1,11 +1,9 @@
 
 // Imports all boardroom component SCSS files for the boardroom page layout.
 
-// Chat area components
-@import 'chat-area/main';
-@import 'chat-area/header';
-@import 'chat-area/message-input';
-@import 'chat-area/empty-state';
+// Import component partials
+@import 'toggle-strip';
+@import 'icon-white';
 
 // Members sidebar components
 @import 'members-sidebar/main';
@@ -14,11 +12,14 @@
 @import 'members-sidebar/search-form';
 @import 'members-sidebar/empty-state';
 @import 'members-sidebar/member-status';
+@import 'members-sidebar/members';
 
-// Import component partials
-@import 'toggle-strip';
-@import 'icon-white';
-@import 'members';
+// Chat area components
+@import 'chat-area/main';
+@import 'chat-area/header';
+@import 'chat-area/message-input';
+@import 'chat-area/empty-state';
+
 
 // Boardroom main layout enhancements
 .boardroom-section {
@@ -37,8 +38,6 @@
   background: $white;
 }
 
-
-
 // Boardroom main row: three-column layout
 .boardroom-main-row {
   @extend .row;
@@ -47,40 +46,5 @@
   align-items: stretch;
 }
 
-// Left column: Toggle strip
-.toggle-strip-col {
-  @extend .col-auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: $gray-100;
-  border-right: 1px solid $gray-200;
-  min-width: 56px;
-  max-width: 72px;
-  padding: 0;
-  z-index: 2;
-}
 
-// Middle column: Members sidebar
-.members-sidebar-col {
-  @extend .col-3;
-  background: $white;
-  border-right: 1px solid $gray-200;
-  min-width: 220px;
-  max-width: 320px;
-  padding: 0;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-}
 
-// Right column: Chat area
-.chat-area-col {
-  @extend .col;
-  background: $white;
-  min-width: 0;
-  flex: 1 1 0%;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-}
