--- a/_sass/components/boardroom/_toggle-strip.scss
+++ b/_sass/components/boardroom/_toggle-strip.scss
@@ -30,3 +30,17 @@
   cursor: pointer;
   transition: all 0.2s;
 }
+
+// Left column: Toggle strip
+.toggle-strip-col {
+  @extend .col-auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: $gray-100;
+  border-right: 1px solid $gray-200;
+  min-width: 56px;
+  max-width: 72px;
+  padding: 0;
+  z-index: 2;
+}
