--- a/_sass/components/boardroom/members-sidebar/_main.scss
+++ b/_sass/components/boardroom/members-sidebar/_main.scss
@@ -22,3 +22,16 @@
   transform: translateX(-100%);
   pointer-events: none;
 }
+
+// Middle column: Members sidebar
+.members-sidebar-col {
+  @extend .col-3;
+  background: $white;
+  border-right: 1px solid $gray-200;
+  min-width: 220px;
+  max-width: 320px;
+  padding: 0;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+}
